--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ContactFormModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -465,7 +466,7 @@
 
                     </div> *@
 
-               @*  </div><!-- End Feature Icons -->
+                </div><!-- End Feature Icons -->
 
             </div>
 
@@ -623,8 +624,8 @@
             </div>
 
         </section><!-- End Pricing Section -->
-        <!-- ======= F.A.Q Section ======= --> *@
-       @*  <section id="faq" class="faq">
+        <!-- ======= F.A.Q Section ======= --> 
+        <section id="faq" class="faq">
 
             <div class="container" data-aos="fade-up">
 
@@ -728,7 +729,7 @@
 
                 </div>
 
-            </div> *@
+            </div> 
 
         </section><!-- End F.A.Q Section -->
         <!-- ======= Portfolio Section ======= -->
@@ -984,7 +985,7 @@
 
             </div>
 
-        </section><!-- End Testimonials Section --> *@
+        </section><!-- End Testimonials Section -->
        @*  <!-- ======= Team Section ======= -->
         <section id="team" class="team">
 
@@ -1103,7 +1104,7 @@
                 </div>
             </div>
  *@
-        @* </section><!-- End Clients Section -->
+         </section><!-- End Clients Section -->
         <!-- ======= Recent Blog Posts Section ======= -->
         <section id="recent-blog-posts" class="recent-blog-posts">
 
@@ -1147,8 +1148,8 @@
 
             </div>
 
-        </section><!-- End Recent Blog Posts Section --> *@
-        @* <!-- ======= Contact Section ======= -->
+        </section><!-- End Recent Blog Posts Section --> 
+         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
 
             <div class="container" data-aos="fade-up">
@@ -1167,21 +1168,21 @@
                                 <div class="info-box">
                                     <i class="bi bi-geo-alt"></i>
                                     <h3>Address</h3>
-                                    <p>A108 Adam Street,<br>New York, NY 535022</p>
+                                    <p>Hyderabad</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="info-box">
                                     <i class="bi bi-telephone"></i>
                                     <h3>Call Us</h3>
-                                    <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                                    <p>7702738161</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="info-box">
                                     <i class="bi bi-envelope"></i>
                                     <h3>Email Us</h3>
-                                    <p>info@example.com<br>contact@example.com</p>
+                                    <p>dhasarinithin7702@gmail.com</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -1191,20 +1192,27 @@
                                     <p>Monday - Friday<br>9:00AM - 05:00PM</p>
                                 </div>
                             </div>
-                        </div>
-
+                        </div>                        
+                        
+                            <div class="text-center text-lg-start">
+                            <a asp-controller="Home" asp-action="ContactUs" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                                    <span>Contact Us</span>
+                                    <i class="bi bi-arrow-right"></i>
+                                </a>
+                            </div>
+                        
                     </div>
 
-                    <div class="col-lg-6">
-                        <form action="forms/contact.php" method="post" class="php-email-form">
+                     <div class="col-lg-6">
+                       @*  <form action="/Home/ContactUs" method="post" class="php-email-form">
                             <div class="row gy-4">
 
                                 <div class="col-md-6">
-                                    <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+                                    <input type="text" name="Name" class="form-control" placeholder="Your Name" required>
                                 </div>
 
                                 <div class="col-md-6 ">
-                                    <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+                                    <input type="email" class="form-control" name="Email" placeholder="Your Email" required>
                                 </div>
 
                                 <div class="col-md-12">
@@ -1212,7 +1220,7 @@
                                 </div>
 
                                 <div class="col-md-12">
-                                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+                                    <textarea class="form-control" name="Mobile" rows="6" placeholder="Mobile" required></textarea>
                                 </div>
 
                                 <div class="col-md-12 text-center">
@@ -1224,17 +1232,18 @@
                                 </div>
 
                             </div>
-                        </form>
+                        </form> *@
 
-                    </div>
+
+                    </div> 
 
                 </div>
 
             </div>
 
         </section><!-- End Contact Section -->
- *@
-    </main>@* <!-- End #main -->
+ @* 
+    </main> <!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
 
@@ -1252,9 +1261,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> *@
 
-        <div class="footer-top">
+       @*  <div class="footer-top">
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-5 col-md-12 footer-info">
@@ -1307,7 +1316,7 @@
 
                 </div>
             </div>
-        </div> *@
+        </div>  *@
 
         @* <div class="container">
             <div class="copyright">
