--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -477,40 +477,42 @@
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h2>Services</h2>
-                    <p>Veritatis et dolores facere numquam et praesentium</p>
+                    <h2>Web Application Functionalities</h2>
+                    
                 </header>
 
                 <div class="row gy-4">
 
                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="service-box blue">
-                            <i class="ri-discuss-line icon"></i>
-                            <h3>Nesciunt Mete</h3>
-                            <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-                            <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+                           @*  <i class="ri-discuss-line icon"></i> *@
+                            <h2>Website Functionality</h2>
+                            <p>It's a banking Web Application ,it has two Policies Owner and User . Owner is a Master Admin Owner has rights to controll the web application</p>
+                            <p></p>
+                            @* <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a> *@
                         </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+                        <div class="service-box green">
+                            
+                            <h3>Master Admin Functionalities</h3>
+                            <p>Edit User Details<br />Delete User<br />Suspend User<br />Approve Loan<br />Reject Loan<br />Approve User Status</p>
+@*                             <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+ *@                        </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="service-box orange">
-                            <i class="ri-discuss-line icon"></i>
-                            <h3>Eosle Commodi</h3>
-                            <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-                            <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
-                        </div>
+                            
+                            <h3>User Functionalities</h3>
+                            <p> Sign Up<br /> Sign In<br /> Email Verification<br />Contact Us<br />My Dashboard <br />Transfer Money <br />Request Loan<br /> Track Request Loan.</p>
+@*                             <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+ *@                        </div>
                     </div>
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-                        <div class="service-box green">
-                            <i class="ri-discuss-line icon"></i>
-                            <h3>Ledo Markt</h3>
-                            <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-                            <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
-                        </div>
-                    </div>
+                    
 
-                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+                    @* <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
                         <div class="service-box red">
                             <i class="ri-discuss-line icon"></i>
                             <h3>Asperiores Commodi</h3>
@@ -539,7 +541,7 @@
 
                 </div>
 
-            </div>
+            </div> *@
 
         </section><!-- End Services Section -->
         <!-- ======= Pricing Section ======= -->
@@ -624,7 +626,7 @@
             </div>
 
         </section><!-- End Pricing Section -->
-        <!-- ======= F.A.Q Section ======= --> 
+        @* <!-- ======= F.A.Q Section ======= --> 
         <section id="faq" class="faq">
 
             <div class="container" data-aos="fade-up">
@@ -729,7 +731,7 @@
 
                 </div>
 
-            </div> 
+            </div> *@ 
 
         </section><!-- End F.A.Q Section -->
         <!-- ======= Portfolio Section ======= -->
