--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -73,6 +73,12 @@
                                     <span class="nav-link-text">Users Login History</span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="Index">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Users Details</span>
+                                </a>
+                            </li>
                         }
 
                        
