--- a/Nithin2003/Views/DashBoard/UsersLoginDetails.cshtml
+++ b/Nithin2003/Views/DashBoard/UsersLoginDetails.cshtml
@@ -37,7 +37,7 @@
                         @if (Context.Session.GetString("Admin") == "True")
                         {
                             <li class="nav-item">
-                                <a class="nav-link active" asp-controller="DashBoard" asp-action="LoanAmountRequest">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Loan Requests</span>
                                 </a>
@@ -45,6 +45,12 @@
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
                                     <span class="nav-link-text">Users Login History</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="Index">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Users Details</span>
                                 </a>
                             </li>
                         }
