--- a/Nithin2003/Views/Users/AddDetails.cshtml
+++ b/Nithin2003/Views/Users/AddDetails.cshtml
@@ -167,37 +167,42 @@
                                         </div>                                        
                                         
                                         <input type="text" asp-for="@Model.Username" placeholder="Enter User Name" class="form-control" />
-                                        <span asp-validation-for="@Model.Username" class="text-danger"></span>
+                                       
                                     </div>
+                                    <span asp-validation-for="@Model.Username" class="text-danger"></span>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">                                        
 
-                                        <input type="Password" asp-for="@Model.Password" pattern="(?=.*[^a-zA-Z0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{10,}$" title="Password must contain at least 10 characters, including at least 1 uppercase letter, at least 1 lowercase letter, at least one number and a special character." placeholder="Enter Password" class="form-control" />
-                                        <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                                        <input type="Password" asp-for="@Model.Password" pattern="(?=.*[^a-zA-Z0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{10,}$" title="Password must contain at least 5-6 characters, including at least 1 uppercase letter, at least 1 lowercase letter, at least one number and a special character." placeholder="Enter Password" class="form-control" />
+                                       
                                     </div>
+                                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
 
                                         <input type="text" asp-for="@Model.Firstname" placeholder="First Name" class="form-control" />
-                                        <span asp-validation-for="@Model.Firstname" class="text-danger"></span>
+                                       
                                     </div>
+                                    <span asp-validation-for="@Model.Firstname" class="text-danger"></span>
                                 </div>
                                 
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
 
                                         <input type="text" asp-for="@Model.Lastname" placeholder="Last Name" class="form-control" />
-                                        <span asp-validation-for="@Model.Lastname" class="text-danger"></span>
+                                        
                                     </div>
+                                    <span asp-validation-for="@Model.Lastname" class="text-danger"></span>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
 
                                         <input type="text" asp-for="@Model.Mobile" pattern="[6789][0-9]{9}" title="Please enter valid Mobile number starts with 6,7,8 and 9" placeholder=" Mobile Number" class="form-control" />
-                                        <span asp-validation-for="@Model.Mobile" class="text-danger"></span>
+                                       
                                     </div>
+                                    <span asp-validation-for="@Model.Mobile" class="text-danger"></span>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
@@ -210,8 +215,9 @@
                                         new SelectListItem { Text = "Warangal", Value = "Warangal"},
                                         new SelectListItem { Text = "Nalgonda", Value = "Nalgonda"},
                                         }, "Select City", new { @class = "form-control" })
-                                        <span asp-validation-for="@Model.City" class="text-danger"></span>
+                                        
                                     </div>
+                                    <span asp-validation-for="@Model.City" class="text-danger"></span>
                                 </div>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
@@ -226,8 +232,9 @@
                                     <div class="input-group input-group-merge input-group-alternative">
 
                                         <input type="datetime-local" asp-for="@Model.Age" placeholder="Age" class="form-control" />
-                                        <span asp-validation-for="@Model.Age" class="text-danger"></span>
+                                       
                                     </div>
+                                    <span asp-validation-for="@Model.Age" class="text-danger"></span>
                                 </div>
                                 
                                
@@ -235,8 +242,9 @@
                                     <div class="input-group input-group-merge input-group-alternative">
 
                                         <input type="email" asp-for="@Model.Email" placeholder="Email" class="form-control" />                                        
-                                        <td>@Html.ValidationMessageFor(m => @Model.Email, "", new { @class = "text-danger" })</td>
+                                        
                                     </div>
+                                    <td>@Html.ValidationMessageFor(m => @Model.Email, "", new { @class = "text-danger" })</td>
                                 </div>                                
                                
                                 <div class="text-center">                                    
@@ -290,6 +298,7 @@
     <!-- Argon JS -->
     <script src="../assets/js/argon.js?v=1.2.0"></script>*@
 </body>
+
 
 </html>
 
