--- a/Nithin2003/Views/Users/ForgotPassword.cshtml
+++ b/Nithin2003/Views/Users/ForgotPassword.cshtml
@@ -12,7 +12,7 @@
             <div class="header-body text-center mb-7">
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 px-5">
-                        <h1 class="text-white">Enter Your Email and User Name</h1>
+                        <h1 class="text-white">Enter Your User Name</h1>
 
                     </div>
                 </div>
@@ -39,7 +39,7 @@
 
                                 @*<input type="submit"  class="btn btn-primary my-4" name="btnsubmit" value="Send OTP" />*@
 
-                                <h3> Enter Your email and user name , if it is not match to user details, Password Has not been sent to Email </h3>
+                                <h3> Enter Your user name , if it Does not match to user details, Password Has not been sent to Email </h3>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
@@ -50,7 +50,7 @@
                                     <span class="text-danger" asp-validation-for="@Model.Username"></span>
                                 </div>
                                
-                                <div class="form-group mb-3">
+                               @*  <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="ni ni-email-83"></i></span>
@@ -59,7 +59,7 @@
                                         <input class="form-control" type="email" asp-for="@Model.Email" placeholder="Enter Email" />                                       
                                     </div>
                                     <span class="text-danger" asp-validation-for="@Model.Email"></span>
-                                </div>
+                                </div> *@
                                 
                                 <div class="text-center">
                                     <input type="submit" class="btn btn-primary my-4" name="btnsubmit" value="Reset" />
