--- a/Nithin2003/Views/Home/Errors.cshtml
+++ b/Nithin2003/Views/Home/Errors.cshtml
@@ -13,6 +13,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-5 col-lg-6 col-md-8 px-5">
                         <h1 class="text-white">Something Went Worng</h1>
+                        <h2 class="text-white">Admin Has Been Notified</h2>
                        
                     </div>
                 </div>
@@ -28,7 +29,7 @@
     <div class="container mt--8 pb-5">
         <div class="row justify-content-center">
             <div class="col-lg-5 col-md-7">
-                <div class="card bg-secondary border-0 mb-0">
+                @* <div class="card bg-secondary border-0 mb-0"> *@
                     <div class="card-header bg-transparent pb-5">
                        
                         <div class="card-body px-lg-5 py-lg-5">
@@ -39,7 +40,7 @@
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
 
-                                        <h2>Admin Has Been Notified</h2>
+                                        @* <h2>Admin Has Been Notified</h2> *@
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -60,7 +61,7 @@
                         </div>
                     </div>
                    
-                </div>
+                @* </div> *@
             </div>
         </div>
     </div>
