Added comment to methods

--- a/Nithin2003/Views/Users/AddDetails.cshtml
+++ b/Nithin2003/Views/Users/AddDetails.cshtml
@@ -199,7 +199,7 @@
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
 
-                                        <input type="text" asp-for="@Model.Mobile" pattern="[6789][0-9]{9}" title="Please enter valid Mobile number starts with 6,7,8 and 9" placeholder=" Mobile Number" class="form-control" />
+                                        <input type="text" asp-for="@Model.Mobile" pattern="[6789][0-9]{9}" title="Please enter valid Mobile number starts with 6,7,8,9 and must contain 10 digits" placeholder=" Mobile Number" class="form-control" />
                                        
                                     </div>
                                     <span asp-validation-for="@Model.Mobile" class="text-danger"></span>
