Added Content Editor

--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center">
                     <h1 data-aos="fade-up">I am Nithin </h1>
-                    <h2 data-aos="fade-up" data-aos-delay="400">This Financial Web Application Developed by me to demonstrate my coding skills</h2>
+                    <h2 data-aos="fade-up" data-aos-delay="400">This web application developed by me to demonstrate my coding skills</h2>
                     <div data-aos="fade-up" data-aos-delay="600">
                         <div class="text-center text-lg-start">
                             <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -83,7 +83,7 @@
                     <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
                         <div class="content">
                             <h3>Intruduction</h3>
-                            <h2>I am Dhasari nithin ,I graguated in BCOM(C.A) from Government Degree College Armoor Under Telangana University </h2>
+                            <h2>I am dhasari nithin ,I graguated in BCOM(C.A) from Government Degree College Armoor Under Telangana University </h2>
 
                             <div class="text-center text-lg-start">
                                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -206,7 +206,7 @@
                 <div class="row">
 
                     <div class="col-lg-6">
-                        @* <img src="~/flex-assets/img/features.png" class="img-fluid" alt=""> *@
+                        <img src="~/flex-assets/img/features.png" class="img-fluid" alt="">
                     </div>
 
                     <div class="col-lg-6 mt-5 mt-lg-0 d-flex">
@@ -556,7 +556,7 @@
 
         </section><!-- End Pricing Section -->
     </main>
-        <main id="main">
+        @* <main id="main">
             <!-- ======= About Section ======= -->
             <section id="about" class="about">
 
@@ -580,7 +580,7 @@
                         </div>
 
                     </div>
-                </div>
+                </div> *@
                 <!-- ======= F.A.Q Section ======= -->
                 <section id="faq" class="faq">
 
@@ -691,7 +691,9 @@
                 </section><!-- End F.A.Q Section -->
 
 
-            </section><!-- End F.A.Q Section -->
+
+
+            
             <!-- ======= Portfolio Section ======= -->
             <section id="portfolio" class="portfolio">
 
@@ -1203,7 +1205,7 @@
 
             </section><!-- End Contact Section -->
 
-        </main> <!-- End #main -->
+       
         @*<!-- ======= Footer ======= -->
         <footer id="footer" class="footer">
 
