--- a/Nithin2003/Views/Users/ForgotPassword.cshtml
+++ b/Nithin2003/Views/Users/ForgotPassword.cshtml
@@ -39,13 +39,13 @@
 
                                 @*<input type="submit"  class="btn btn-primary my-4" name="btnsubmit" value="Send OTP" />*@
 
-                                <h3> Enter Your user name , if it Does not match to user details, Password Has not been sent to Email </h3>
+                                <h3>Fill the below details</h3>
                                 <div class="form-group mb-3">
                                     <div class="input-group input-group-merge input-group-alternative">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="ni ni-circle-08"></i></span>
                                         </div>
-                                        <input class="form-control" type="text" asp-for="@Model.Username" placeholder="Enter Username" />                                        
+                                        <input class="form-control" type="text" asp-for="@Model.Username" placeholder="Enter User Name" />                                        
                                     </div>
                                     <span class="text-danger" asp-validation-for="@Model.Username"></span>
                                 </div>
