--- a/Nithin2003/Views/Admin/Index.cshtml
+++ b/Nithin2003/Views/Admin/Index.cshtml
@@ -62,14 +62,15 @@
                         </li>
                         @if (Context.Session.GetString("Admin") == "True")
                         {
-                            <li class="nav-item">
+                            @* <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Admin" asp-action="LoanAmountRequest">
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Loan Requests</span>
                                 </a>
-                            </li>
+                            </li> *@
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Users Login History</span>
                                 </a>
                             </li>
