--- a/Nithin2003/Views/DashBoard/Index.cshtml
+++ b/Nithin2003/Views/DashBoard/Index.cshtml
@@ -46,7 +46,7 @@
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
                     <ul class="navbar-nav">
-
+                        
 
                         <li class="nav-item">
                             <a class="nav-link active" asp-controller="DashBoard" asp-action="TransferMoney">
@@ -54,106 +54,134 @@
                                 <span class="nav-link-text">Transfer Money</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Request a Loan</span>
-                            </a>                          
+                        @if (Context.Session.GetString("Admin") != "True")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Request a Loan</span>
+                                </a>
 
-                        </li>
-                        
+                            </li>
+
+
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
                                     <i class="ni ni-money-coins"></i>
                                     <span class="nav-link-text">Track Loan Status</span>
                                 </a>
                             </li>
-                        
-                        
+                        }
+                        @if (Context.Session.GetString("ContentEditor") == "True")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Content Editor</span>
+                                </a>
+                            </li>
 
-                       @* <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-tv-2 text-primary"></i>
-                                <span class="nav-link-text">Dashboard</span>
-                            </a>
+                        }
+                        @if (Context.Session.GetString("Admin") == "True")
+                        {
+                            
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                                    <i class="ni ni-circle-08"></i>
+                                    <span class="nav-link-text">Users Login History</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Admin" asp-action="Index">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Users Details</span>
+                                </a>
+                            </li>
+                        }
+
+                        @* <li class="nav-item">
+                        <a class="nav-link">
+                        <i class="ni ni-tv-2 text-primary"></i>
+                        <span class="nav-link-text">Dashboard</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-pin-3 text-primary"></i>
-                                <span class="nav-link-text">Google</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-pin-3 text-primary"></i>
+                        <span class="nav-link-text">Google</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-single-02 text-yellow"></i>
-                                <span class="nav-link-text">Profile</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-single-02 text-yellow"></i>
+                        <span class="nav-link-text">Profile</span>
+                        </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-bullet-list-67 text-default"></i>
-                                <span class="nav-link-text">Tables</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-bullet-list-67 text-default"></i>
+                        <span class="nav-link-text">Tables</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-key-25 text-info"></i>
-                                <span class="nav-link-text">Login</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-key-25 text-info"></i>
+                        <span class="nav-link-text">Login</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-circle-08 text-pink"></i>
-                                <span class="nav-link-text">Register</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-circle-08 text-pink"></i>
+                        <span class="nav-link-text">Register</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">
-                                <i class="ni ni-send text-dark"></i>
-                                <span class="nav-link-text">Upgrade</span>
-                            </a>
+                        <a class="nav-link">
+                        <i class="ni ni-send text-dark"></i>
+                        <span class="nav-link-text">Upgrade</span>
+                        </a>
                         </li>
-                    </ul>
-                    <!-- Divider -->
-                    <hr class="my-3">
-                    <!-- Heading -->
-                    <h6 class="navbar-heading p-0 text-muted">
+                        </ul>
+                        <!-- Divider -->
+                        <hr class="my-3">
+                        <!-- Heading -->
+                        <h6 class="navbar-heading p-0 text-muted">
                         <span class="docs-normal">Documentation</span>
-                    </h6>
-                    <!-- Navigation -->
-                    <ul class="navbar-nav mb-md-3">
+                        </h6>
+                        <!-- Navigation -->
+                        <ul class="navbar-nav mb-md-3">
                         <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
-                                <i class="ni ni-spaceship"></i>
-                                <span class="nav-link-text">Getting started</span>
-                            </a>
+                        <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html" target="_blank">
+                        <i class="ni ni-spaceship"></i>
+                        <span class="nav-link-text">Getting started</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
-                                <i class="ni ni-palette"></i>
-                                <span class="nav-link-text">Foundation</span>
-                            </a>
+                        <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html" target="_blank">
+                        <i class="ni ni-palette"></i>
+                        <span class="nav-link-text">Foundation</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html" target="_blank">
-                                <i class="ni ni-ui-04"></i>
-                                <span class="nav-link-text">Components</span>
-                            </a>
+                        <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html" target="_blank">
+                        <i class="ni ni-ui-04"></i>
+                        <span class="nav-link-text">Components</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
-                                <i class="ni ni-chart-pie-35"></i>
-                                <span class="nav-link-text">Plugins</span>
-                            </a>
+                        <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/plugins/charts.html" target="_blank">
+                        <i class="ni ni-chart-pie-35"></i>
+                        <span class="nav-link-text">Plugins</span>
+                        </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active active-pro" href="examples/upgrade.html">
-                                <i class="ni ni-send text-dark"></i>
-                                <span class="nav-link-text">Upgrade to PRO</span>
-                            </a>
+                        <a class="nav-link active active-pro" href="examples/upgrade.html">
+                        <i class="ni ni-send text-dark"></i>
+                        <span class="nav-link-text">Upgrade to PRO</span>
+                        </a>
                         </li>
-                    </ul>*@
+                        </ul>*@
                 </div>
             </div>
         </div>
