--- a/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
+++ b/Nithin2003/Views/Dashboard/TrackLoanRequest.cshtml
@@ -35,19 +35,32 @@
                                 <span class="nav-link-text">Transfer Money</span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Request a Loan</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
-                                <i class="ni ni-money-coins"></i>
-                                <span class="nav-link-text">Track Loan Status</span>
-                            </a>
-                        </li>
-                        
+                        @if (Context.Session.GetString("Admin") != "True")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="DashBoard" asp-action="UserLoanRequest">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Request a Loan</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="DashBoard" asp-action="TrackLoanRequest">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Track Loan Status</span>
+                                </a>
+                            </li>
+                        }
+                        @if (Context.Session.GetString("ContentEditor") == "True")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Users" asp-action="UsersContentEditor">
+                                    <i class="ni ni-money-coins"></i>
+                                    <span class="nav-link-text">Content Editor</span>
+                                </a>
+                            </li>
+
+                        }
+
                         @*<li class="nav-item">
                             <a class="nav-link ">
                                 <i class="ni ni-tv-2 text-primary"></i>
