--- a/Nithin2003/Views/Home/Index.cshtml
+++ b/Nithin2003/Views/Home/Index.cshtml
@@ -1156,17 +1156,17 @@
                                 </div>
                             </div>
 
-                            <div class="text-center text-lg-start">
+                            @* <div class="text-center text-lg-start">
                                 <a asp-controller="Home" asp-action="ContactUs" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                                     <span>Contact Us</span>
                                     <i class="bi bi-arrow-right"></i>
                                 </a>
-                            </div>
+                            </div> *@
 
                         </div>
 
                         <div class="col-lg-6">
-                            @*  <form action="/Home/ContactUs" method="post" class="php-email-form">
+                             <form action="/Home/ContactUs" method="post" class="php-email-form">
                             <div class="row gy-4">
 
                             <div class="col-md-6">
@@ -1178,11 +1178,11 @@
                             </div>
 
                             <div class="col-md-12">
-                            <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+                                <input type="number" class="form-control" name="Mobile" placeholder="Mobile" required>
                             </div>
 
                             <div class="col-md-12">
-                            <textarea class="form-control" name="Mobile" rows="6" placeholder="Mobile" required></textarea>
+                                <textarea class="form-control" name="Subject" rows="6" placeholder="Mobile" required></textarea>
                             </div>
 
                             <div class="col-md-12 text-center">
@@ -1194,7 +1194,7 @@
                             </div>
 
                             </div>
-                            </form> *@
+                            </form>
 
 
                         </div>
@@ -1206,8 +1206,8 @@
             </section><!-- End Contact Section -->
 
        
-        @*<!-- ======= Footer ======= -->
-        <footer id="footer" class="footer">
+        <!-- ======= Footer ======= -->
+        @* <footer id="footer" class="footer">
 
         <div class="footer-newsletter">
         <div class="container">
@@ -1223,9 +1223,9 @@
         </div>
         </div>
         </div>
-        </div> *@
+        </div>  *@
 
-        @*  <div class="footer-top">
+          <div class="footer-top">
         <div class="container">
         <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
@@ -1267,20 +1267,20 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
         <h4>Contact Us</h4>
         <p>
-        A108 Adam Street <br>
-        New York, NY 535022<br>
-        United States <br><br>
-        <strong>Phone:</strong> +1 5589 55488 55<br>
-        <strong>Email:</strong> info@example.com<br>
+        
+        Hyderabad<br>
+         Telangana <br><br>
+        <strong>Phone:</strong> +91 77027 38161<br>
+        <strong>Email:</strong> dhasarinithin7702@gmil.com<br>
         </p>
 
         </div>
 
         </div>
         </div>
-        </div>  *@
+        </div>  
 
-        @* <div class="container">
+         <div class="container">
         <div class="copyright">
         &copy; Copyright <strong><span>FlexStart</span></strong>. All Rights Reserved
         </div>
@@ -1292,7 +1292,7 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         </div>
-        </footer><!-- End Footer --> *@
+        </footer><!-- End Footer -->
 
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
