--- a/Nithin2003/Views/DashBoard/UsersLoginDetails.cshtml
+++ b/Nithin2003/Views/DashBoard/UsersLoginDetails.cshtml
@@ -44,6 +44,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" asp-controller="Dashboard" asp-action="UsersLoginDetails">
+                                    <i class="ni ni-circle-08"></i>
                                     <span class="nav-link-text">Users Login History</span>
                                 </a>
                             </li>
